fix(intro news): fixes the margins on mobile

--- a/scss/theme/custom.scss
+++ b/scss/theme/custom.scss
@@ -44,6 +44,13 @@ nav * {
     width: 100%;
 }
 
+//Mobile
+@media screen and (max-width: 600px) {
+    #publications {
+        margin-top: 1rem;
+    }
+
+}
 
 #banner-content {
     width: 100%;
